[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-debianbts"
authors = [
    { name="Bastian Venthur", email="venthur@debian.org" },
]
description = "Python interface to Debian's Bug Tracking System"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7, <4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Bug Tracking",
]
dynamic = ["version"]
dependencies = [
    "pysimplesoap>=1.16.2",
]

[project.scripts]
debianbts = "debianbts.__main__:main"

[project.urls]
'Documentation' = 'https://python-debianbts.readthedocs.io/'
'Source' = 'https://github.com/venthur/python-debianbts'
'Changelog' = 'https://github.com/venthur/python-debianbts/blob/master/CHANGELOG.md'

[project.optional-dependencies]
dev = [
    "build==0.9.0",
    "sphinx==4.3.2",
    "pytest==7.2.0",
    "pytest-cov==4.0.0",
    "pytest-xdist==3.0.2",
    "flake8==5.0.4",
    "wheel==0.37.1",
    "twine==4.0.1",
    "mypy==0.982",
]

[tool.setuptools.dynamic]
version = {attr = "debianbts.version.__version__" }

[tool.setuptools]
packages = ["debianbts"]

[tool.pytest.ini_options]
addopts = """
    --cov=debianbts
    --cov=tests
    --cov-report=html
    --cov-report=term-missing:skip-covered
    --numprocesses=auto
"""

[tool.mypy]
files = "debianbts,tests"
strict = true

[[tool.mypy.overrides]]
module = "pysimplesoap.*"
ignore_missing_imports = true
