[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-debianbts"
authors = [
    { name="Bastian Venthur", email="venthur@debian.org" },
]
description = "Python interface to Debian's Bug Tracking System"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8, <4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Bug Tracking",
]
dynamic = ["version"]
dependencies = []

[project.scripts]
debianbts = "debianbts.__main__:main"

[project.urls]
'Documentation' = 'https://python-debianbts.readthedocs.io/'
'Source' = 'https://github.com/venthur/python-debianbts'
'Changelog' = 'https://github.com/venthur/python-debianbts/blob/master/CHANGELOG.md'

[project.optional-dependencies]
dev = [
    "build",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "wheel",
    "twine",
    "mypy",
]

[tool.setuptools.dynamic]
version = {attr = "debianbts.version.__version__" }

[tool.setuptools]
packages = ["debianbts"]

[tool.pytest.ini_options]
addopts = """
    --cov=debianbts
    --cov=tests
    --cov-report=html
    --cov-report=term-missing:skip-covered
    --numprocesses=auto
"""

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",        # pyflakes
    "E", "W",   # pycodestyle
    "C90",      # mccabe
    "I",        # isort
    "D",        # pydocstyle
    "UP"        # pyupgrade
]
pydocstyle.convention = "numpy"

[tool.mypy]
files = "debianbts,tests"
strict = true
